--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
-      <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
+      <video class="video active" width="100%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
       <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
 </div>
 
