--- a/index.html
+++ b/index.html
@@ -156,12 +156,11 @@
     </div>
   </div>
 
-  <div class="container is-max-desktop">
-    <div class="hero-body">
+  <div class="hero-body">
     <video class="video active" width="12000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
         <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
-    </div>
   </div>
+
 
 <!-- <section class="section">
   <div class="container is-max-desktop">
@@ -201,36 +200,7 @@
 </section>
 
 
-<!-- <section class="hero is-small is-centered has-text-centered">
-  <h2 class="title is-3">Reconstruction Results</h2>
-  <div class="hero-body">
-  <div class="video-container">
-  
-    <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
-    </video>
-    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
-    </video>
-    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
-    </video>
-    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0616.mp4" type="video/mp4">
-    </video>
-    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-8b.mp4" type="video/mp4">
-    </video>
-    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
-    </video>
 
-    <div class="controls">
-      <button class="control-button prev" onclick="prevVideo()">❮</button>
-      <button class="control-button next" onclick="nextVideo()">❯</button>
-    </div>
-  </div>
-</div> -->
 
 
 <div class="nav-dots">
@@ -377,8 +347,40 @@
 </section>
  -->
 
+<section class="hero is-light is-small is-centered has-text-centered">
+  <h2 class="title is-3">Reconstruction Results</h2>
+  <div class="hero-body">
+  <div class="video-container">
+  
+    <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
+      <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
+    </video>
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
+      <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
+    </video>
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
+      <source src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
+    </video>
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
+      <source src="./static/videos/reconstruction_results/gs-0616.mp4" type="video/mp4">
+    </video>
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
+      <source src="./static/videos/reconstruction_results/gs-8b.mp4" type="video/mp4">
+    </video>
+    <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
+      <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
+    </video>
 
-<section class="hero is-centered has-text-centered">
+    <div class="controls">
+      <button class="control-button prev" onclick="prevVideo()">❮</button>
+      <button class="control-button next" onclick="nextVideo()">❯</button>
+    </div>
+  </div>
+</div>
+
+</section>
+
+<section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
     <div class="carousel-container">
