--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
 
-  <!-- <link rel="stylesheet" href="./static/css/bulma.min.css"> -->
-  <!-- <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
-  <link rel="stylesheet" href="./static/css/bulma-slider.min.css"> -->
+  <link rel="stylesheet" href="./static/css/bulma.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
   <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
-  <!-- <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"> -->
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
   <link rel="icon" href="./static/images/indoor.ico">
 
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script defer src="./static/js/fontawesome.all.min.js"></script> -->
-  <!-- <script src="./static/js/bulma-carousel.min.js"></script>
-  <script src="./static/js/bulma-slider.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script defer src="./static/js/fontawesome.all.min.js"></script>
+  <script src="./static/js/bulma-carousel.min.js"></script>
+  <script src="./static/js/bulma-slider.min.js"></script>
   <script src="./static/js/index.js"></script>
   <script src="./static/js/video_comparison.js"></script>
 
@@ -156,32 +156,10 @@
     </div>
   </div>
 
-  <div class="hero-body">
+  <!-- <div class="hero-body">
     <video class="video active" width="12000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
         <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
-  </div>
-
-
-<!-- <section class="section">
-  <div class="container is-max-desktop">
-    <h2 class="title is-3" style="text-align: center;">Comparisons</h2>
-      <div class="content">
-        <h2 class="title is-4">ScanNet</h2>
-        <div class="button-container" id="btn1">
-          <button onclick="changeImages(event, 'cmp1','./static/videos/scene0050_00_2dgs.mp4', './static/videos/scene0050_00_ours.mp4')" class="cmp-button cmp-btn-checked">scene0050</button>
-          <button onclick="changeImages(event, 'cmp1','./static/videos/scene0050_00_2dgs.mp4', './static/videos/scene0050_00_ours.mp4')" class="cmp-button">scene0616</button>
-        </div>
-        <div class="cmp-container" id="cmp1">
-            <div class="bottom">
-                <img src="./static/videos/scene0085_00_2dgs.mp4"/>
-            </div>
-            <div class="top">
-                <img src="./static/videos/scene0085_00_ours.mp4"/>
-            </div>
-            <div class="cmp-slider"></div>
-        </div>
-      </div>
-</section> -->
+  </div> -->
 
 <!-- <div class="row">
   <div class="col-md-8 col-md-offset-2">
