--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
     </div>
   </div>
 
-  <!-- <div class="hero-body">
+  <div class="hero-body">
     <video class="video active" width="12000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
         <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
-  </div> -->
+  </div>
 
 <!-- <div class="row">
   <div class="col-md-8 col-md-offset-2">
