--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
   </div>
 
   <div class="hero-body">
-    <video class="video active" width="12000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
-        <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
+    <video class="video active" width="100%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0085_00.mp4" onplay="resizeAndPlay(this)" style="height: 400px;"></video>
+        <canvas height=400 class="videoMerge" id="teaserMerge"></canvas>
   </div>
 
 <!-- <div class="row">
