--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
     </div>
 
     <div class="hero-body">
-      <video class="video active" width="50%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0085_00.mp4" onplay="resizeAndPlay(this)"></video>
+      <video class="video active" width="5000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0085_00.mp4" onplay="resizeAndPlay(this)"></video>
           <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
     </div>
-    
+
   </div>
 
   
