--- a/index.html
+++ b/index.html
@@ -154,30 +154,24 @@
     <div class="hero-body">
       <img src="./static/images/teaser.png" alt="teaser" width="12000">
     </div>
-
-    <div class="hero-body">
-      <video class="video active" width="5000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0085_00.mp4" onplay="resizeAndPlay(this)"></video>
-          <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
+ 
+    <div class="columns">
+      <div class="column">
+        <div class="hero-body">
+          <video class="video active" width="5000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0085_00.mp4" onplay="resizeAndPlay(this)"></video>
+              <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
+        </div>
+      </div>
+      
+      <div class="column">
+        <div class="hero-body">
+          <video class="video active" width="5000" id="teaser2" loop playsinline autoplay muted src="./static/videos/scene0085_00.mp4" onplay="resizeAndPlay(this)"></video>
+          <canvas height="0" class="videoMerge" id="teaserMerge2"></canvas>
+        </div>
+      </div>
     </div>
 
   </div>
-
-  
-
-<!-- <div class="row">
-  <div class="col-md-8 col-md-offset-2">
-      <video class="video active" width="100%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 0px;"></video>
-      <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
-</div> -->
-
-<!-- <div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <video class="video" width="100%" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0050_00.mp4" onplay="resizeAndPlay(this)" style="height: 400px;"></video>
-    <canvas height="400" class="videoMerge" id="teaserMerge"></canvas>
-  </div>
-</div> -->
-
-
 </section>
 
 
