--- a/index.html
+++ b/index.html
@@ -354,37 +354,37 @@
     <div class="carousel-container">
       <div id="comparisons-carousel" class="carousel comparisons-carousel">
         <div class="item item-all-0050">
-          <video poster="" id="all-0050" autoplay controls muted loop playsinline width="100%">
+          <video poster="" id="all-0050" autoplay controls muted loop playsinline>
             <source src="./static/videos/reconstruction_comparisons/all-0050.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-0085">
-          <video poster="" id="all-0085" autoplay controls muted loop playsinline width="100%">
+          <video poster="" id="all-0085" autoplay controls muted loop playsinline>
             <source src="./static/videos/reconstruction_comparisons/all-0085.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-0580">
-          <video poster="" id="all-0580" autoplay controls muted loop playsinline width="100%">
+          <video poster="" id="all-0580" autoplay controls muted loop playsinline>
             <source src="./static/videos/reconstruction_comparisons/all-0580.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-0616">
-          <video poster="" id="all-0616" autoplay controls muted loop playsinline width="100%">
+          <video poster="" id="all-0616" autoplay controls muted loop playsinline>
             <source src="./static/videos/reconstruction_comparisons/all-0616.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-8b">
-          <video poster="" id="all-8b" autoplay controls muted loop playsinline width="100%">
+          <video poster="" id="all-8b" autoplay controls muted loop playsinline>
             <source src="./static/videos/reconstruction_comparisons/all-8b.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-all-8d">
-          <video poster="" id="all-8d" autoplay controls muted loop playsinline width="100%">
+          <video poster="" id="all-8d" autoplay controls muted loop playsinline>
             <source src="./static/videos/reconstruction_comparisons/all-8d.mp4"
                     type="video/mp4">
           </video>
