--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
 
  
-
+<!-- 
 <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Results</h2>
   <div class="hero-body">
@@ -305,11 +305,9 @@
 
 </section>
 
-<!-- JavaScript 代码 -->
+
 <script>
-  // 获取所有视频元素
   const videos = document.querySelectorAll(".video");
-  // 获取所有导航点元素
   const dots = document.querySelectorAll(".dot");
   // 当前活动视频的索引
   let currentIndex = 0;
@@ -345,10 +343,107 @@
 
   // 初始化时更新导航点状态
   updateDots();
-</script>
+</script> -->
+
 
 
 <section class="hero is-light is-small is-centered has-text-centered">
+  <h2 class="title is-3">Reconstruction Results</h2>
+  <div class="hero-body">
+    <div class="video-container">
+      <!-- 左侧预览视频 -->
+      <video class="video preview rounded-corners" autoplay muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
+      </video>
+
+      <!-- 当前显示的视频 -->
+      <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
+      </video>
+
+      <!-- 右侧预览视频 -->
+      <video class="video preview rounded-corners" autoplay muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
+      </video>
+
+      <!-- 控制按钮 -->
+      <div class="controls">
+        <button class="control-button prev" onclick="prevVideo()">❮</button>
+        <button class="control-button next" onclick="nextVideo()">❯</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- 导航点 -->
+  <div class="nav-dots">
+    <span class="dot" onclick="switchVideo(0)"></span>
+    <span class="dot" onclick="switchVideo(1)"></span>
+    <span class="dot" onclick="switchVideo(2)"></span>
+    <span class="dot" onclick="switchVideo(3)"></span>
+    <span class="dot" onclick="switchVideo(4)"></span>
+    <span class="dot" onclick="switchVideo(5)"></span>
+  </div>
+</section>
+
+<script>
+  // 获取所有视频元素
+  const videos = document.querySelectorAll(".video");
+  const previewVideos = document.querySelectorAll(".video.preview");
+  // 获取所有导航点元素
+  const dots = document.querySelectorAll(".dot");
+  // 当前活动视频的索引
+  let currentIndex = 0;
+
+  // 视频源数组
+  const videoSources = [
+    "./static/videos/reconstruction_results/gs-0050.mp4",
+    "./static/videos/reconstruction_results/gs-0085.mp4",
+    "./static/videos/reconstruction_results/gs-0580.mp4",
+    "./static/videos/reconstruction_results/gs-0616.mp4",
+    "./static/videos/reconstruction_results/gs-8b.mp4",
+    "./static/videos/reconstruction_results/gs-8d.mp4"
+  ];
+
+  // 切换到指定索引视频的函数
+  function switchVideo(index) {
+    currentIndex = index;
+    // 隐藏所有视频
+    videos.forEach(video => video.classList.remove("active"));
+    // 显示当前视频
+    videos[currentIndex].classList.add("active");
+
+    // 更新左右视频的预览源
+    previewVideos[0].src = videoSources[(currentIndex - 1 + videoSources.length) % videoSources.length]; // 左侧预览
+    previewVideos[1].src = videoSources[(currentIndex + 1) % videoSources.length]; // 右侧预览
+
+    // 更新导航点状态
+    updateDots();
+  }
+
+  // 切换到上一个视频的函数
+  function prevVideo() {
+    currentIndex = (currentIndex - 1 + videos.length) % videos.length;
+    switchVideo(currentIndex);
+  }
+
+  // 切换到下一个视频的函数
+  function nextVideo() {
+    currentIndex = (currentIndex + 1) % videos.length;
+    switchVideo(currentIndex);
+  }
+
+  // 更新导航点状态的函数
+  function updateDots() {
+    dots.forEach(dot => dot.classList.remove("active-dot"));
+    dots[currentIndex].classList.add("active-dot");
+  }
+
+  // 初始化时更新导航点状态
+  updateDots();
+
+</script>
+
+<!-- <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
     <div class="carousel-container">
@@ -392,7 +487,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <br>
 <section class="hero teaser">
