--- a/index.html
+++ b/index.html
@@ -48,44 +48,10 @@
 <title>Video Carousel</title>
 <style>
   /* CSS 样式 */
-  .video-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* 让视频容器铺满整个视口高度 */
-    position: relative;
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    max-width: 1080px; /* 设置最大宽度，防止视频过大超出屏幕 */
-  }
-
-  .video {
-    width: 100%;
-    height: auto;
-    display: block; /* 初始隐藏所有视频 */
-    max-width: auto; /* 视频最大宽度为网页宽度 */
-  }
-  .active {
-    display: block; /* 显示当前活动的视频 */
-  } 
-
-  .rounded-corners {
-    border-radius: 10px; 
-  }
 
 
-  .preview {
-    width: 25%;  /* 缩小版视频占总宽度的25% */
-    opacity: 0.7;  /* 增加透明度，使其看起来像预览 */
-  }
 
-  .active {
-    width: 50%;  /* 当前视频占总宽度的50% */
-    opacity: 1;   /* 保证当前视频完全显示 */
-  }
-
-  .controls {
+  /* .controls {
     position: absolute;
     top: 50%;
     left: 0;
@@ -125,7 +91,7 @@
   .active-dot {
     background-color: #333;
   }
-
+ */
 
 </style>
 
@@ -209,7 +175,7 @@
     </div>
  
     <div class="hero-body">
-      <video class="video" width="24000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0085_00.mp4" onplay="resizeAndPlay(this)"></video>
+      <video class="hvideo" width="24000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0085_00.mp4" onplay="resizeAndPlay(this)"></video>
           <canvas height=0 class="videoMerge" id="teaserMerge"></canvas>
     </div>
 
@@ -309,39 +275,38 @@
 
 
  
-<!-- 
-<section class="hero is-light is-small is-centered has-text-centered">
+<section class="hero is-light is-centered has-text-centered">
+  <!-- <div class="columns is-centered has-text-centered"> -->
   <h2 class="title is-3">Reconstruction Results</h2>
-  <div class="hero-body">
-  <div class="video-container">
   
-    <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
+  <div class="video-container">
+    <video class="video active rounded-corners" autoplay controls muted loop playsinline height="100%">
+      <source id="video1" src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
+      <source id="video2" src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
+      <source id="video3" src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0616.mp4" type="video/mp4">
+      <source id="video4" src="./static/videos/reconstruction_results/gs-0616.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-8b.mp4" type="video/mp4">
+      <source id="video5" src="./static/videos/reconstruction_results/gs-8b.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
+      <source id="video6" src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
     </video>
-
+    
     <div class="controls">
       <button class="control-button prev" onclick="prevVideo()">❮</button>
       <button class="control-button next" onclick="nextVideo()">❯</button>
     </div>
   </div>
-</div>
 
 
+<!-- 导航点 -->
 <div class="nav-dots">
   <span class="dot" onclick="switchVideo(0)"></span>
   <span class="dot" onclick="switchVideo(1)"></span>
@@ -351,11 +316,11 @@
   <span class="dot" onclick="switchVideo(5)"></span>
 </div>
 
-</section>
-
-
+<!-- JavaScript 代码 -->
 <script>
+  // 获取所有视频元素
   const videos = document.querySelectorAll(".video");
+  // 获取所有导航点元素
   const dots = document.querySelectorAll(".dot");
   // 当前活动视频的索引
   let currentIndex = 0;
@@ -391,107 +356,10 @@
 
   // 初始化时更新导航点状态
   updateDots();
-</script> -->
-
+</script>
 
 
 <section class="hero is-light is-small is-centered has-text-centered">
-  <h2 class="title is-3">Reconstruction Results</h2>
-  <div class="hero-body">
-    <div class="video-container">
-      <!-- 左侧预览视频 -->
-      <video class="video preview rounded-corners" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
-      </video>
-
-      <!-- 当前显示的视频 -->
-      <video class="video rounded-corners active" autoplay controls muted loop playsinline height="100%">
-        <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
-      </video>
-
-      <!-- 右侧预览视频 -->
-      <video class="video preview rounded-corners" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
-      </video>
-
-      <!-- 控制按钮 -->
-      <div class="controls">
-        <button class="control-button prev" onclick="prevVideo()">❮</button>
-        <button class="control-button next" onclick="nextVideo()">❯</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- 导航点 -->
-  <div class="nav-dots">
-    <span class="dot" onclick="switchVideo(0)"></span>
-    <span class="dot" onclick="switchVideo(1)"></span>
-    <span class="dot" onclick="switchVideo(2)"></span>
-    <span class="dot" onclick="switchVideo(3)"></span>
-    <span class="dot" onclick="switchVideo(4)"></span>
-    <span class="dot" onclick="switchVideo(5)"></span>
-  </div>
-</section>
-
-<script>
-  // 获取所有视频元素
-  const videos = document.querySelectorAll(".video");
-  const previewVideos = document.querySelectorAll(".video.preview");
-  // 获取所有导航点元素
-  const dots = document.querySelectorAll(".dot");
-  // 当前活动视频的索引
-  let currentIndex = 0;
-
-  // 视频源数组
-  const videoSources = [
-    "./static/videos/reconstruction_results/gs-0050.mp4",
-    "./static/videos/reconstruction_results/gs-0085.mp4",
-    "./static/videos/reconstruction_results/gs-0580.mp4",
-    "./static/videos/reconstruction_results/gs-0616.mp4",
-    "./static/videos/reconstruction_results/gs-8b.mp4",
-    "./static/videos/reconstruction_results/gs-8d.mp4"
-  ];
-
-  // 切换到指定索引视频的函数
-  function switchVideo(index) {
-    currentIndex = index;
-    // 隐藏所有视频
-    videos.forEach(video => video.classList.remove("active"));
-    // 显示当前视频
-    videos[currentIndex].classList.add("active");
-
-    // 更新左右视频的预览源
-    previewVideos[0].src = videoSources[(currentIndex - 1 + videoSources.length) % videoSources.length]; // 左侧预览
-    previewVideos[1].src = videoSources[(currentIndex + 1) % videoSources.length]; // 右侧预览
-
-    // 更新导航点状态
-    updateDots();
-  }
-
-  // 切换到上一个视频的函数
-  function prevVideo() {
-    currentIndex = (currentIndex - 1 + videos.length) % videos.length;
-    switchVideo(currentIndex);
-  }
-
-  // 切换到下一个视频的函数
-  function nextVideo() {
-    currentIndex = (currentIndex + 1) % videos.length;
-    switchVideo(currentIndex);
-  }
-
-  // 更新导航点状态的函数
-  function updateDots() {
-    dots.forEach(dot => dot.classList.remove("active-dot"));
-    dots[currentIndex].classList.add("active-dot");
-  }
-
-  // 初始化时更新导航点状态
-  updateDots();
-
-</script>
-
-<!-- <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
     <div class="carousel-container">
@@ -535,7 +403,7 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 <br>
 <section class="hero teaser">
