--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <span class="author-block">
               <a href="https://scholar.google.com.hk/citations?user=4eRwbOEAAAAJ&hl=zh-CN">Zhichao Liao</a>,</span>
             <span class="author-block">
-              Xiansong Lai,</span>
+              <a href="https://scholar.google.com/citations?user=YB0QrZgAAAAJ&hl=en">Xiansong Lai</a>,</span>
             <span class="author-block">
               <a href="https://github.com/Crayon-Shinchan">Xinghui Li</a>,<sup>✉</sup></span>
             <span class="author-block">
