--- a/index.html
+++ b/index.html
@@ -226,9 +226,11 @@
 </section>
 
 
-<!-- <section class="hero is-small is-centered has-text-centered">
-  <h2 class="title is-3">Reconstruction Results</h2>
-  <div class="hero-body">
+
+<section class="hero is-light is-small is-centered has-text-centered">
+  <br>
+  <h2 class="title is-3">2DGS vs Ours</h2>
+  <!-- <div class="hero-body"> -->
     <div class="carousel-container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-gs-0050">
@@ -268,35 +270,34 @@
           </video>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
+  <br>
 </section>
- -->
 
-
- 
-<section class="hero is-light is-centered has-text-centered">
+<br>
+<section class="hero is-centered has-text-centered">
   <!-- <div class="columns is-centered has-text-centered"> -->
-  <h2 class="title is-3">Reconstruction Results</h2>
-  
+  <br>
+  <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="video-container">
     <video class="video active rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source id="video1" src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
+      <source id="video1" src="./static/videos/reconstruction_comparisons/all-0050.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source id="video2" src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
+      <source id="video2" src="./static/videos/reconstruction_comparisons/all-0085.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source id="video3" src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
+      <source id="video3" src="./static/videos/reconstruction_comparisons/all-0580.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source id="video4" src="./static/videos/reconstruction_results/gs-0616.mp4" type="video/mp4">
+      <source id="video4" src="./static/videos/reconstruction_comparisons/all-0616.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source id="video5" src="./static/videos/reconstruction_results/gs-8b.mp4" type="video/mp4">
+      <source id="video5" src="./static/videos/reconstruction_comparisons/all-8b.mp4" type="video/mp4">
     </video>
     <video class="video rounded-corners" autoplay controls muted loop playsinline height="100%">
-      <source id="video6" src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
+      <source id="video6" src="./static/videos/reconstruction_comparisons/all-8d.mp4" type="video/mp4">
     </video>
     
     <div class="controls">
@@ -304,7 +305,6 @@
       <button class="control-button next" onclick="nextVideo()">❯</button>
     </div>
   </div>
-
 
 <!-- 导航点 -->
 <div class="nav-dots">
@@ -359,11 +359,12 @@
 </script>
 
 
+<!-- <br>
 <section class="hero is-light is-small is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
     <div class="carousel-container">
-      <div id="comparisons-carousel" class="carousel comparisons-carousel">
+      <div id="comparisons-carousel" class="carousel">
         <div class="item item-all-0050">
           <video poster="" id="all-0050" autoplay controls muted loop playsinline>
             <source src="./static/videos/reconstruction_comparisons/all-0050.mp4"
@@ -402,10 +403,14 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+
 </section>
 
-<br>
+
+
+
+<br><br>
 <section class="hero teaser">
     <div class="columns is-centered has-text-centered">
       <h2 class="title is-3">Rendering Comparisons</h2>
