--- a/index.html
+++ b/index.html
@@ -533,9 +533,9 @@
          href="https://arxiv.org/pdf/2405.19671">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <!-- <a class="icon-link" href="https://github.com/xhd0612/GaussianRoom" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/Valentina-Zhang/2DGS-Room" class="external-link" disabled>
         <i class="fab fa-github"></i>
-      </a> -->
+      </a>
     </div>
 
     <div class="columns is-centered">
