--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2405.19671"
+                <a href="https://arxiv.org/pdf/2412.03428"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -148,7 +148,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2405.19671"
+                <a href="https://arxiv.org/abs/2412.03428"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -475,7 +475,7 @@
     <pre><code>@article{zhang20242dgs-room,
       title={2DGS-Room: Seed-Guided 2D Gaussian Splatting with Geometric Constrains for High-Fidelity Indoor Scene Reconstruction},
       author={Wanting Zhang, Haodong Xiang, Zhichao Liao, Xiansong Lai, Xinghui Li and Long Zeng},
-      journal={arXiv preprint arXiv:xxx},
+      journal={arXiv preprint arXiv:2412.03428},
       year={2024}
 }</code></pre>
   </div>
@@ -530,7 +530,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="https://arxiv.org/pdf/2405.19671">
+         href="https://arxiv.org/pdf/2412.03428">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/Valentina-Zhang/2DGS-Room" class="external-link" disabled>
