--- a/index.html
+++ b/index.html
@@ -472,9 +472,9 @@
     <p>
       If you find this project useful in your research, please consider cite:
     </p>
-    <pre><code>@article{zhang20242dgs-room,
+    <pre><code>@article{zhang20242dgsroom,
       title={2DGS-Room: Seed-Guided 2D Gaussian Splatting with Geometric Constrains for High-Fidelity Indoor Scene Reconstruction},
-      author={Wanting Zhang, Haodong Xiang, Zhichao Liao, Xiansong Lai, Xinghui Li and Long Zeng},
+      author={Wanting Zhang and Haodong Xiang and Zhichao Liao and Xiansong Lai and Xinghui Li and Long Zeng},
       journal={arXiv preprint arXiv:2412.03428},
       year={2024}
 }</code></pre>
