--- a/index.html
+++ b/index.html
@@ -46,54 +46,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Video Carousel</title>
-<style>
-  /* CSS 样式 */
 
-
-
-  /* .controls {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
-  }
-
-  .control-button {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-  }
-
-  .control-button:hover {
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-
-  .nav-dots {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-
-  .dot {
-    width: 10px;
-    height: 10px;
-    background-color: #bbb;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
-  }
-
-  .active-dot {
-    background-color: #333;
-  }
- */
-
-</style>
 
 </head>
 <body>
@@ -137,28 +90,27 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
-              <span class="link-block">
-                <a href="https://arxiv.org/pdf/2412.03428"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                  </span>
-                  <span>Paper</span>
-                </a>
-              </span>
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2412.03428"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
-              </span>
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                  <i class="ai ai-arxiv"></i>
+                </span>
+                <span>arXiv</span>
+              </a>
+            </span>
+            <!-- PDF Link. -->
+            <span class="link-block">
+              <a href="https://arxiv.org/pdf/2412.03428"
+                 class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                    <i class="fas fa-file-pdf"></i>
+                </span>
+                <span>Paper</span>
+              </a>
+            </span>
 
             </div>
-
           </div>
         </div>
       </div>
@@ -438,24 +390,10 @@
             <div class="content has-text-justified">
 
               <p>
-                We thank <a href="https://github.com/hbb1/2d-gaussian-splatting">2DGS</a>
-                <!-- and <a href="https://lingjie0206.github.io/papers/NeuS/">NeuS</a> -->
+                We thank <a href="https://github.com/hbb1/2d-gaussian-splatting">2D Gaussian Splatting</a>
                 for our code references.
               </p>
 
-              <!-- <p>
-                <a href="https://arxiv.org/abs/2104.09125">Progressive Encoding for Neural Optimization</a> introduces an idea similar to our windowed position encoding for coarse-to-fine optimization.
-              </p>
-              <p>
-                <a href="https://www.albertpumarola.com/research/D-NeRF/index.html">D-NeRF</a> and <a href="https://gvv.mpi-inf.mpg.de/projects/nonrigid_nerf/">NR-NeRF</a>
-                both use deformation fields to model non-rigid scenes.
-              </p>
-              <p>
-                Some works model videos with a NeRF by directly modulating the density, such as <a href="https://video-nerf.github.io/">Video-NeRF</a>, <a href="https://www.cs.cornell.edu/~zl548/NSFF/">NSFF</a>, and <a href="https://neural-3d-video.github.io/">DyNeRF</a>
-              </p>
-              <p>
-                There are probably many more by the time you are reading this. Check out <a href="https://dellaert.github.io/NeRF/">Frank Dellart's survey on recent NeRF papers</a>, and <a href="https://github.com/yenchenlin/awesome-NeRF">Yen-Chen Lin's curated list of NeRF papers</a>.
-              </p> -->
             </div>
           </div>
         </div>
@@ -467,7 +405,6 @@
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
-    <!-- <h2 class="title">BibTeX</h2> -->
     <h2 class="title is-3">BibTeX</h2>
     <p>
       If you find this project useful in your research, please consider cite:
@@ -481,50 +418,6 @@
   </div>
 </section>
 
-<!-- <section class="section" id="BibTeX">
-  <div class="container is-max-desktop content">
-    <h2 class="title">BibTeX</h2>
-    <pre><code>@article{xxx,
-  author    = {xxx},
-  title     = {2DGS-Room},
-  journal   = {xxxx},
-  year      = {2024},
-}</code></pre>
-  </div>
-</section> -->
-
-<!-- <footer class="footer">
-  <div class="container">
-    <div class="content has-text-centered">
-      <a class="icon-link"
-         href="./static/videos/nerfies_paper.pdf">
-        <i class="fas fa-file-pdf"></i>
-      </a>
-      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-
-    <div class="columns is-centered">
-      <div class="column is-8">
-        <div class="content">
-          <p>
-            This website is licensed under a <a rel="license"
-                                                href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
-            Commons Attribution-ShareAlike 4.0 International License</a>.
-          </p>
-          <p>
-            This means you are free to borrow the <a
-              href="https://github.com/nerfies/nerfies.github.io">source code</a> of this website,
-            we just ask that you link back to this page in the footer.
-            Please remember to remove the analytics code included in the header of the website which
-            you do not want on your website.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer> -->
 
 <footer class="footer">
   <div class="container">
