--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     <p>
       If you find this project useful in your research, please consider cite:
     </p>
-    <pre><code>@article{zhang20242dgs-room,
+    <pre><code>@article{zhang20242dgsroom,
       title={2DGS-Room: Seed-Guided 2D Gaussian Splatting with Geometric Constrains for High-Fidelity Indoor Scene Reconstruction},
       author={Zhang, Wanting and Xiang, Haodong and Liao, Zhichao and Lai, Xiansong and Li, Xinghui and Zeng, Long},
       journal={arXiv preprint arXiv:2412.03428},
