--- a/index.html
+++ b/index.html
@@ -109,7 +109,15 @@
                 <span>arXiv</span>
               </a>
             </span>
-
+            <span class="link-block">
+                <a href="https://github.com/Valentina-Zhang/2DGS-Room"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Github</span>
+                </a>
+              </span>
             </div>
           </div>
         </div>
