--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <span class="author-block">
               <a href="https://github.com/Crayon-Shinchan">Xinghui Li</a>,<sup>✉</sup></span>
             <span class="author-block">
-              <a href="https://www.sigs.tsinghua.edu.cn/cl/main.htm">Long Zeng</a><sup>✉</sup></span>
+              <a href="https://www.sigs.tsinghua.edu.cn/cl/">Long Zeng</a><sup>✉</sup></span>
           </div>
 
           <div class="is-size-5 publication-authors">
