--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
+    <!-- <div class="hero-body">
       <img src="./static/images/teaser.png" alt="teaser" width="12000">
-    </div>
+    </div> -->
  
     <div class="hero-body">
       <video class="hvideo" width="24000" id="teaser" loop playsinline autoplay muted src="./static/videos/scene0085_00.mp4" onplay="resizeAndPlay(this)"></video>
@@ -141,6 +141,16 @@
 
   </div>
 </section>
+
+<section class="hero is-centered has-text-centered">
+  <!-- <div class="columns is-centered has-text-centered"> -->
+  <br>
+  <h2 class="title is-3">Reconstruction Comparisons</h2>
+  <div class="video-container">
+    <video class="video active rounded-corners" autoplay controls muted loop playsinline height="100%">
+      <source id="video1" src="./static/videos/2dgsroom_video.mp4" type="video/mp4">
+    </video>
+  </div>
 
 
 <section class="section">
