--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <section class="hero is-centered has-text-centered">
   <!-- <div class="columns is-centered has-text-centered"> -->
   <br>
-  <h2 class="title is-3">Reconstruction Comparisons</h2>
+  <h2 class="title is-3">Video</h2>
   <div class="video-container">
     <video class="video active rounded-corners" autoplay controls muted loop playsinline height="100%">
       <source id="video1" src="./static/videos/2dgsroom_video.mp4" type="video/mp4">
