--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
       <source id="video1" src="./static/videos/2dgsroom_video.mp4" type="video/mp4">
     </video>
   </div>
+</section>
 
 
 <section class="section">
